--- a/src/components/loginComponents/formSide/form.module.scss
+++ b/src/components/loginComponents/formSide/form.module.scss
@@ -21,7 +21,38 @@
     .Paragraph {
       font-size: 1rem;
       color: grey;
-      margin-bottom: 5rem;
+      margin-bottom: 3rem;
+    }
+
+    .Register_Link {
+      margin-top: 2.5rem;
+      text-align: center;
+      opacity: .7;
+      display: block;
+    }
+
+    .alerta {
+      text-align: center;
+      position: relative;
+      padding: 0.6rem 2rem;
+      border-radius: 1rem;
+      font-family: var(--headingFont);
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      text-align: center;
+      width: 100%;
+      margin-bottom: 3rem;
+    }
+
+    .alerta_error {
+      background-color: rgb(230, 78, 78);
+      color: #ffffff;
+    }
+
+    .alerta_ok {
+      background-color: rgb(109, 211, 109);
+      color: #ffffff;
     }
   }
 }
