Added signup logic and components

--- a/src/components/registerComponents/form/form.module.scss
+++ b/src/components/registerComponents/form/form.module.scss
@@ -24,7 +24,7 @@
       margin-bottom: 3rem;
     }
 
-    .Register_Link {
+    .Login_Link {
       margin-top: 2.5rem;
       text-align: center;
       opacity: .7;
