--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,12 @@
 html {
   font-size: 62.5%
 } */
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 body {
   /* font-size: 1.6rem; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
