--- a/src/components/landingComponents/Parallax/Parallax.module.scss
+++ b/src/components/landingComponents/Parallax/Parallax.module.scss
@@ -21,12 +21,21 @@
     font-size: 3rem;
     text-align: center;
     margin: 0.2em 0 1em 0;
+
+    @media screen and (max-width: 767px) {
+      font-size: 1.5rem;
+      margin: 0.2em 0 2em 0;
+    }
   }
 
   span {
     color: #ffffff;
     font-size: 4rem;
     text-align: center;
+
+    @media screen and (max-width: 767px) {
+      font-size: 3rem;
+    }
   }
 }
 
@@ -36,10 +45,22 @@
   align-items: center;
   justify-content: center;
 
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+
   a {
     margin: 0.5em;
     width: 20%;
     border-radius: 50px;
+
+    @media screen and (max-width: 1024px) {
+      width: 40%;
+    }
+
+    @media screen and (max-width: 767px) {
+      width: 40%;
+    }
   }
 
   .Login_link {
