--- a/src/components/landingComponents/About/About.module.scss
+++ b/src/components/landingComponents/About/About.module.scss
@@ -48,7 +48,7 @@
   }
 
   .Background_Image {
-    width: 90%;
+    width: 85%;
     padding: 2em;
     align-self: center;
     justify-self: center;
@@ -64,6 +64,7 @@
     border-radius: 50px;
     align-self: center;
     margin-top: 1em;
+    margin-bottom: 2em;
 
     &:hover {
       background-color: #1487F2;
