Added the characteristics section and Responsibles section

--- a/src/components/landingComponents/Characteristics/Characteristics.module.scss
+++ b/src/components/landingComponents/Characteristics/Characteristics.module.scss
@@ -1,6 +1,5 @@
 .Container {
   width: 100%;
-  background: #eff1f6;
 }
 
 .Characteristics_Container {
@@ -49,6 +48,7 @@
       h4 {
         font-size: 1.7rem;
         text-align: center;
+        color: #787373;
       }
     }
   }
