Added the responsible section, changed the logo and icons, started the footer section

--- a/src/components/landingComponents/About/About.module.scss
+++ b/src/components/landingComponents/About/About.module.scss
@@ -44,7 +44,29 @@
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
-    padding-bottom: 0.5em;
+    margin-bottom: 0;
+  }
+
+  .Heading_Divider {
+    border-bottom: 1px solid #FFF;
+    background-color: #DADADA;
+    height: 1px;
+    margin: 1em 0 2em 42%;
+
+    @media screen and (max-width: 767px) {
+      margin: 1em 0 0.5em 0;
+    }
+
+    & span {
+      display: block;
+      width: 100px;
+      height: 1px;
+      background-color: #F60;
+
+      @media screen and (max-width: 767px) {
+        margin: auto;
+      }
+    }
   }
 
   .Background_Image {
