--- a/src/components/landingComponents/Responsible/Responsible.module.scss
+++ b/src/components/landingComponents/Responsible/Responsible.module.scss
@@ -26,13 +26,27 @@
     align-items: center;
 
     h2 {
-      padding: 1.5em 0 1.5em 0;
+      padding: 1.5em 0 0 0;
       align-self: center;
       margin: 0;
       color: #ffffff;
       font-size: 2rem;
       text-transform: uppercase;
       font-weight: 700;
+    }
+
+    .Heading_Divider {
+      border-bottom: 1px solid #FFF;
+      background-color: #DADADA;
+      height: 1px;
+      margin: 1em 0 1.5em 0;
+
+      & span {
+        display: block;
+        width: 100px;
+        height: 1px;
+        background-color: #F60;
+      }
     }
 
     .Profile_Container {
