--- a/src/components/landingComponents/Characteristics/Characteristics.module.scss
+++ b/src/components/landingComponents/Characteristics/Characteristics.module.scss
@@ -7,12 +7,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3em;
 
   h2 {
     font-size: 2rem;
     text-transform: uppercase;
     font-weight: 800;
-    margin: 1.5em 0 0 0;
+    margin-top: 2.5em;
   }
 
   .Heading_Divider {
