--- a/src/components/landingComponents/Responsible/Responsible.module.scss
+++ b/src/components/landingComponents/Responsible/Responsible.module.scss
@@ -6,6 +6,7 @@
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  padding: 4em 0;
 
   &:before {
     content: '';
@@ -26,7 +27,7 @@
     align-items: center;
 
     h2 {
-      padding: 1.5em 0 0 0;
+      padding: .3em 0 0 0;
       align-self: center;
       margin: 0;
       color: #ffffff;
