--- a/src/components/loginComponents/sideImage/sideImage.module.scss
+++ b/src/components/loginComponents/sideImage/sideImage.module.scss
@@ -1,11 +1,16 @@
 .SideImage_Container {
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: #26a69a;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
   .SideImage {
-    width: 100%;
+    width: 90%;
     display: block;
-    height: 100%;
-    object-fit: cover;
   }
 }
