--- a/src/components/registerComponents/form/form.module.scss
+++ b/src/components/registerComponents/form/form.module.scss
@@ -1,5 +1,5 @@
 .Container {
-  width: 70%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,6 +8,14 @@
     width: 60%;
     padding: 1em;
     margin-bottom: 5em;
+
+    @media screen and (max-width: 1024px) {
+      width: 80%;
+    }
+
+    @media screen and (max-width: 767px) {
+      width: 90%;
+    }
 
     .Form {
       width: 100%;
