--- a/src/containers/registerContainer.module.scss
+++ b/src/containers/registerContainer.module.scss
@@ -2,4 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
+
+  @media screen and (max-width: 767px) {
+    height: 100vh;
+  }
 }
