--- a/src/components/landingComponents/Heading/Heading.module.scss
+++ b/src/components/landingComponents/Heading/Heading.module.scss
@@ -9,19 +9,31 @@
   font-size: 1.6rem !important;
   margin-left: 5%;
 
-  @media screen and (max-width: 420px) {
-    width: 60%;
-    // left: 0 !important;
-    // margin-left: 45%;
+  @media screen and (max-width: 464px) {
+    width: 53%;
   }
 
   @media screen and (max-width: 450px) {
     width: 53%;
   }
 
+  @media screen and (max-width: 420px) {
+    width: 60%;
+  }
+
+  @media screen and (max-width: 396px) {
+    margin-left: 25%;
+    width: 100%
+  }
+
   @media screen and (max-width: 383px) {
-    // margin-left: 90%;
+    margin-left: 5%;
     width: 60%
+  }
+
+  @media screen and (max-width: 350px) {
+    margin-left: 21%;
+    width: 100%
   }
 
   @media screen and (max-width: 320px) {
